--- a/src/App.css
+++ b/src/App.css
@@ -53,6 +53,10 @@
   color: #61dafb;
 }
 
+.MuiTextField-root  {
+  background: beige;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
